Refactoring in Chain and SingleNodeStrategy